--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -44,9 +44,19 @@ h1 {
     margin: 30px;
 }
 
-#high-scores {
+.infobar {
     position: fixed;
-    top: 35px;
+    top: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#high-scores {
+    font-size: 2.5rem;
+}
+
+#timer {
     font-size: 2.5rem;
 }
 
