--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -60,6 +60,10 @@ h1 {
     font-size: 2.5rem;
 }
 
+#time-remaining {
+    font-size: 2.5rem;
+}
+
 #question-box {
     display: flex;
     width: 100%;
